--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,11 @@
   <%= analytics_init if Rails.env.production? %>
 </head>
 <body>
+<div class="session">
+	<% if user_signed_in? %>
+		<%= render "devise/avatar" %>
+	<% end %>
+</div>
 
 <%= yield %>
 
