add paperclip and mailer settings

--- a/app/views/devise/_header.html.erb
+++ b/app/views/devise/_header.html.erb
@@ -1,5 +1,5 @@
 <div id="logo">
-<img src="images/ourbronx-logo.png" alt="Our Bronx"/>
+<img src="images/ourbronx.png" alt="Our Bronx"/>
 </div>
 
 # <% if user_signed_in? %>
