--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,8 @@
   <%= analytics_init if Rails.env.production? %>
 </head>
 <body>
-<div class="session">
-	<% if user_signed_in? %>
-		<%= render "devise/avatar" %>
-	<% end %>
+<div id="header">
+	<%= render "devise/header" %>
 </div>
 
 <%= yield %>
