--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -2,4 +2,7 @@
 
 <div id="collab-poem-intro"><h2>Bronx life is romantic, comedic, tragic, empowering, and overall poetic. Contribute your verse:</h2></div>
 
+<div id="event-stream">
+<div id="events-title">LOCAL EVENTS</div>
 <%= @events.html_safe %>
+</div>
