start community page with events

--- a/app/assets/stylesheets/eventbrite.css
+++ b/app/assets/stylesheets/eventbrite.css
@@ -1141,7 +1141,7 @@ body,.text-default,.modal__body {
     -webkit-box-orient: vertical;
     white-space: normal;
     overflow: hidden;
-    color: rgba(0,0,0,.8);
+    color: #713B90;
     font-size: 15px;
     line-height: 20px;
     height: 40px;
