--- a/app/views/causes/show.html.erb
+++ b/app/views/causes/show.html.erb
@@ -1,9 +1,12 @@
 <p id="notice"><%= notice %></p>
+<br><br><br>
+  <div class="row">
+    <%= form_tag("/causes/#{@cause.id}/donate") do %>
+      $<%= number_field_tag 'amount' %>
+      <%= submit_tag "Donate", class: "btn btn-info" %>
+    <% end %>
+  </div>
 
-<%= form_tag("/causes/#{@cause.id}/donate") do %>
-  $<%= number_field_tag 'amount' %>
-  <%= submit_tag "Donate", class: "btn btn-info" %>
-<% end %>
 
 <br>
 
