--- a/app/assets/stylesheets/eventbrite.css
+++ b/app/assets/stylesheets/eventbrite.css
@@ -1062,20 +1062,22 @@ body,.text-default,.modal__body {
     transition: background-color .5s;
     overflow: hidden;
     text-align: center;
-    width: 190px;
+    width: 95px;
     height: 95px;
+    border-radius:50%;
+    border:3px solid #8C8C8C;
 }
 
 .list-card .list-card__header .list-card__image img {
-    max-width: 100%;
     max-height: 100%;
-    -webkit-transform: translateY(-50%);
-    -moz-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    -o-transform: translateY(-50%);
-    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%) translateX(-25%);
+    -moz-transform: translateY(-50%) translateX(-25%);
+    -ms-transform: translateY(-50%) translateX(-25%);
+    -o-transform: translateY(-50%) translateX(-25%);
+    transform: translateY(-50%) translateX(-25%);
     position: relative;
     top: 50%;
+    max-width: 200px !important;
 }
 
 @media only screen and (max-width:479px) {
@@ -1098,9 +1100,9 @@ body,.text-default,.modal__body {
     box-sizing: border-box;
     padding: 2px 10px;
     background-color: #f2f2f2;
-    background-color: rgba(0,0,0,.05);
+    background-color: rgba(0,0,0,.02);
+    text-align: center;
     display: block;
-    width: 190px;
 }
 
 @media only screen and (max-width:479px) {
@@ -1141,15 +1143,16 @@ body,.text-default,.modal__body {
     -webkit-box-orient: vertical;
     white-space: normal;
     overflow: hidden;
-    color: #713B90;
-    font-size: 15px;
-    line-height: 20px;
-    height: 40px;
+    font-size: 14px;
+    padding: 10px 0;
+    line-height: 16px;
     max-height: 40px;
     font-weight: 700;
     letter-spacing: 0;
     margin-bottom: 10px;
-}
+    font-family: 'gotham_ssmlight' !important;
+    color: #361B3E !important;
+}    
 
 .list-card .list-card__body .list-card__organizer,.list-card .list-card__body .list-card__venue {
     text-overflow: ellipsis;
