--- a/app/views/community/index.html.erb
+++ b/app/views/community/index.html.erb
@@ -1,9 +1,28 @@
 
-<div id="event-stream">
-<div id="events-title">LOCAL EVENTS</div>
-<%= @events.html_safe %>
-<div id="events-load-more">LOAD MORE</div>
+<div id="events-cbs-container">
+	<div id="event-stream">
+		<div id="events-title">LOCAL EVENTS</div>
+			<%= @events.html_safe %>
+		<div id="events-load-more">LOAD MORE</div>
+	</div>
+
+	<div id="community-boards">
+	 	<div id="cbs-title">COMMUNITY BOARDS</div>
+		<div id="cbs-container">
+			<div id="cbs-inner">
+				<%= @boards.html_safe %>
+			</div>
+		</div>
+		<div id="cb-controls">
+			<div class="cb-btn" id="cb-1-btn">1</div>
+			<div class="cb-btn" id="cb-4-btn">4</div>
+			<div class="cb-btn" id="cb-8-btn">8</div>
+		</div>
+	</div>
 </div>
+
+
+
 
 <script type="text/javascript">
 
@@ -12,11 +31,38 @@ var orig = $(".js-event-list-container").html();
 $(document).ready(function(){
 	items = $(".l-block-2").slice(0,4);
 	$(".js-event-list-container").html(items) 
+
+	$(".l-block-2 a").each(function() {
+		$(this).attr('target', '_blank');
+	})
 });
 
 $("#events-load-more").click(function(){
-	$(".js-event-list-container").html(orig) 
+	$(".js-event-list-container").html(orig);
+	$(this).text("^^ SCROLL");
 });
 
+$(".cb-btn").click(function(){
+	$(".cb-btn").removeClass("active");
+	$(this).addClass("active");
+});
+
+$("#cb-1-btn").click(function(){
+	$("#cbs-inner").css("transform", "translateY(0)")
+});
+
+$("#cb-4-btn").click(function(){
+	$("#cbs-inner").css("transform", "translateY(-571px)")
+});
+
+$("#cb-8-btn").click(function(){
+	$("#cbs-inner").css("transform", "translateY(-1142px)")
+});
 
 </script>
+
+
+
+
+
+
