--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,5 +1,12 @@
+<div id="new-project">
+<%= image_tag('city-hands.png') %>
 <h1>New Project</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', projects_path %>
+<div class="back-btn">
+	<%= link_to 'Back', projects_path %>
+</div>
+
+</div>
+
