--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>OurBronx</title>
-  <%= stylesheet_link_tag    'application', media: 'all' %>
-  <%= javascript_include_tag 'application' %>
-  <%= csrf_meta_tags %>
-  <%= analytics_init if Rails.env.production? %>
-</head>
-<body>
-
-
-<%= render partial: "layouts/flash_messages", flash: flash %>
-<%= yield %>
-
-</body>
+  <head>
+    <title>OurBronx</title>
+    <%= stylesheet_link_tag    'application', media: 'all' %>
+    <%= javascript_include_tag 'application' %>
+    <%= csrf_meta_tags %>
+    <%= analytics_init if Rails.env.production? %>
+  </head>
+  <body>
+    <div id="header">
+    	<%= render "devise/header" %>
+    </div>
+    <%= render partial: "layouts/flash_messages", flash: flash %>
+    <%= yield %>
+  </body>
 </html>
