fix cause forms

--- a/app/views/causes/index.html.erb
+++ b/app/views/causes/index.html.erb
@@ -48,7 +48,7 @@
                 <% else %>
                 <h4 class="text-center">No Scholarships funded yet, be the first to donate!</h4>
               <% end %>
-              <h5 class="text-center"><%= link_to "Apply/Learn More", cause_path(cause), class: "donate-btn" %></h5>
+              <h5 class="text-center"><%= link_to "Apply/Learn More", apply_path(cause), class: "donate-btn" %></h5>
             </div>
           </div>
         </div>
