--- a/app/assets/stylesheets/projects.css
+++ b/app/assets/stylesheets/projects.css
@@ -168,11 +168,138 @@
 	width:70%;
 	margin: 0 auto;
 	display: flex;
+	text-align:left;
 }
 
-.project-title {
-	font-size: 40px;
+.project-info {
     padding: 140px 50px 0;
     font-family: 'gotham_ssmbook';
 }
 
+.project-title {
+    font-size: 40px;
+    font-size: 30px;
+    line-height: 30px;
+}
+
+.project-createdby,
+.project-summary {
+	font-size:15px;
+	padding-left:20px;
+	width:70%;
+	margin-top:20px;
+	font-family: 'gotham_ssmlight_italic';
+}
+
+input[id="project_image"] {
+	width: 300px !important;
+	color: #fff !important;
+	margin: 0 auto !important;
+}
+
+.project-body {
+    width: 70%;
+    margin: 0 auto;
+}
+
+.project-body-text {
+	font-size: 18px;
+    font-family: 'gotham_ssmextra_light';
+	text-align: left;
+    line-height: 22px;
+    margin: 20px 0;
+}
+
+
+.project-body-title {
+	font-size: 22px;
+	font-family: 'gotham_ssmbook';
+	text-align: left;
+	margin: 20px 0 10px 0;
+}
+
+.project-body-section {
+    margin-bottom: 40px;
+    margin-top: 130px;
+}
+
+#services-help,
+#resources-help,
+#mentor-help {
+	text-align: left;
+}
+
+.help-button {
+    border: 2px solid;
+    display: inline-block;
+    padding: 10px 20px;
+    border-radius: 30px;
+    background-color: #26263E;
+    font-size: 20px;
+}
+
+form.project-join input {
+	height:50px !important;
+	padding: 0 20px  !important;
+}
+
+form.project-join input[type="submit"] {
+	width:150px  !important;
+}
+
+form.project-join input[name="message"]{
+	width: calc(100% - 170px) !important;
+}
+
+form.project-join {
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+.hide {
+	display: none;
+}
+.project-usr img {
+	width: 70px;
+    border-radius: 50%;
+    border: 5px solid;
+    margin: 0 10px;
+}
+
+.project-usrs-cont {
+	display: flex;
+	float: right;
+}
+
+.recent-joins {
+	text-align:right;
+	font-size: 18px;
+    padding-right: 20px;
+}
+
+
+.large-projects-btn {
+	font-family: 'gotham_ssmbook';
+    font-size: 20px;
+    background: #4A144A;
+    color: #fff !important;
+    padding: 10px 15px;
+    border-radius: 30px;
+    margin: 0 auto;
+    width: 300px;
+    display: block;
+    text-align: center;
+    margin-top: 50px;
+}
+
+#menu {
+	position: absolute;
+    top: 15px;
+    font-size: 15px;
+    width: 40%;
+    transform: translateX(70%);
+}
+
+#menu a {
+	color: #4A144A;
+	padding: 0 20px;
+}
