--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -1,8 +1,16 @@
 <%= render "homepage/slideshow" %>
 <div id="hp-intro">
 Community projects that reclaim the potential of the Bronx.<br>
+<a href="users/sign_up">
 <div id="hp-join-btn">
-JOIN THE <span id="hp-join-r">R</span>EVOLUTION
+JOIN THE REVOLUTION
 </div>
+</a>
 </div>
 <%= render "projects/projects" %>
+
+<a class="large-projects-btn" href="projects">VIEW ALL PROJECTS</a>
+<br><br><br>
+<br><br><br>
+
+<%= image_tag("haydil.jpg") %>
