--- a/app/views/projects/_projects.html.erb
+++ b/app/views/projects/_projects.html.erb
@@ -1,5 +1,5 @@
 <div id="project-cards-container" %>
-	<% Project.all.each do |p| %>
+	<% Project.all[0..3].each do |p| %>
 	<div class="project-card">
 		<a href="/projects/<%=p.id%>">
 			<div class="pc-title"><%= p.title %></div>
