--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,41 +1,18 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Projects</h1>
+<div style="margin-top: 160px !important;" id="project-cards-container" %>
+  <% Project.all[0..3].each do |p| %>
+  <div class="project-card">
+    <a href="/projects/<%=p.id%>">
+      <div class="pc-title"><%= p.title %></div>
+      <div class="pc-img" style="background: url('<%= p.image.url%> ')">
+      </div>
+      <div class="pc-desc"><%= p.summary %></div>
+      <div class="pc-avatar"><%= image_tag p.user.avatar %></div>
+      </a>
+  </div>
+  <% end %>
+</div>
 
-<table>
-  <thead>
-    <tr>
-      <th>User</th>
-      <th>Title</th>
-      <th>Summary</th>
-      <th>Mentorship req</th>
-      <th>Resources req</th>
-      <th>Services req</th>
-      <th>Published</th>
-      <th>Approved</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @projects.each do |project| %>
-      <tr>
-        <td><%= project.user %></td>
-        <td><%= project.title %></td>
-        <td><%= project.summary %></td>
-        <td><%= project.mentorship_req %></td>
-        <td><%= project.resources_req %></td>
-        <td><%= project.services_req %></td>
-        <td><%= project.published %></td>
-        <td><%= project.approved %></td>
-        <td><%= link_to 'Show', project %></td>
-        <td><%= link_to 'Edit', edit_project_path(project) %></td>
-        <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Project', new_project_path %>
+<%= link_to 'New Project', new_project_path, class: "large-projects-btn" %>
