--- a/app/views/causes/edit.html.erb
+++ b/app/views/causes/edit.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @cause %> |
-<%= link_to 'Back', causes_path %>
+<%= link_to 'Show', @cause %> | <%= link_to 'Back', causes_path %>
