--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -1,4 +1,5 @@
 <%= image_tag("haydil.jpg") %>
 
-<div id="collab-poem-intro"><h2>Bronx life is romantic, comedic, tragic, empowering, and overall poetic. Contribute your verse:</h2></div>
-
+<div id="collab-poem-intro">
+  <h2>Bronx life is romantic, comedic, tragic, empowering, and overall poetic. Contribute your verse:</h2>
+</div>
