--- a/app/views/projects/_projects.html.erb
+++ b/app/views/projects/_projects.html.erb
@@ -1,13 +1,23 @@
 <div id="project-cards-container" %>
-	<% Project.all[0..3].each do |p| %>
+	<% Project.all[0..3].each do |project| %>
 	<div class="project-card">
-		<a href="/projects/<%=p.id%>">
-			<div class="pc-title"><%= p.title %></div>
-			<div class="pc-img" style="background: url('<%= p.image.url%> ')">
-			</div>
-			<div class="pc-desc"><%= p.summary %></div>
-			<div class="pc-avatar"><%= image_tag p.user.avatar %></div>
-	    </a>
+			<%= link_to project_path(project) do %>
+				<div class="pc-title"><%= project.title %></div>
+				<div class="pc-img" style="background: url('<%= project.image.url%> ')">
+				</div>
+				<div class="pc-desc"><%= project.summary %></div>
+				<div class="pc-avatar">
+					<% rpath = Rails.application.root.join("public") %>
+					<% Project.first.user.avatar.url.match(/(.*jpg)/).captures.first.split("/").each do |path| %>
+						<% rpath = rpath.join(path) unless path.empty? %>
+					<% end %>
+					<% if File.exist?(rpath) %>
+						<%= image_tag(project.user.avatar.url) %>
+					<% else %>
+						<%= image_tag(project.user.avatar_file_name) %>
+					<% end %>
+				</div>
+			<% end %>
 	</div>
 	<% end %>
 </div>
