fix avatars for demo and add payment style

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -5,3 +5,12 @@
  *= require_self
  *= require_tree .
 */
+
+.small {
+  width: 3em;
+  height: 3em;
+}
+
+.marg-top {
+  margin-top: 160px !important;
+}
