--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -13,7 +13,9 @@ $("form").hide();
     <div class="p-image" style="background-image: url('<%= @project.image.url%> ')">
     </div>
     <div class="p-user-avatar">
-      <%= image_tag(@project.user.avatar) %>
+      <%# image_tag(@project.user.avatar) %>
+      <!-- TODO: Make sure to change it back to the paperclip way -->
+      <%= image_tag(@project.user.avatar_file_name) %>
     </div>
   </div>
   <div class="project-info">
